# app/Models/BoardOption.php
@@ -16,7 +16,7 @@ use Carbon\Carbon;
  *      @OA\Property(property="id", type="string", example=1, description="게시판 옵션 고유 번호" ),
  *      @OA\Property(property="name", type="string", example="글 작성", description="게시판 옵션 명" ),
  *      @OA\Property(property="type", type="string", example="board", description="게시판 옵션 타입" ),
- *      @OA\Property(property="data_type", type="string", example="radio", description="게시판 옵션 데이터 타입" ),
+ *      @OA\Property(property="dataType", type="string", example="radio", description="게시판 옵션 데이터 타입" ),
  *      @OA\Property(property="default", type="string", example="all", description="게시판 옵션 기본값" ),
  *      @OA\Property(property="options", type="array", collectionFormat="multi", example={{"value":"all","comment":"모두 작성 가능"},{"value":"manager","comment":"운영진만 작성 가능"},{"value":"member","comment":"회원만 작성가능"}},
  *          @OA\Items(
@@ -45,9 +45,29 @@ class BoardOption extends Model
         'options',
     ];
 
+    /**
+     * The attributes that should be hidden for arrays.
+     *
+     * @var array
+     */
+    protected $hidden = [
+        'data_type',
+        'created_at',
+        'updated_at',
+    ];
+
     protected $casts = [
         'options' => 'array'
     ];
+
+    protected $maps = [
+        'dataType' => 'data_type',
+    ];
+
+    protected $appends = [
+        'dataType',
+    ];
+
 
     public function getCreatedAtAttribute($value){
         return Carbon::parse($value)->format('c');
