# storage/api-docs/api-docs.json
@@ -171,32 +171,9 @@
             }
         },
         "/admin/board": {
-            "get": {
-                "tags": [
-                    "게시판"
-                ],
-                "summary": "게시판 목록",
-                "description": "게시판 목록",
-                "operationId": "adminBoardList",
-                "responses": {
-                    "200": {
-                        "description": "successfully Modified",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "array",
-                                    "items": {
-                                        "$ref": "#/components/schemas/BoardOptionJson"
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            },
             "post": {
                 "tags": [
-                    "게시판"
+                    "-게시판"
                 ],
                 "summary": "게시판 생성",
                 "description": "게시판 생성",
@@ -297,13 +274,18 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "davinci_auth": []
+                    }
+                ]
             }
         },
         "/admin/board/{id}": {
             "patch": {
                 "tags": [
-                    "게시판"
+                    "-게시판"
                 ],
                 "summary": "게시판 수정",
                 "description": "게시판 수정",
@@ -383,13 +365,48 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "davinci_auth": []
+                    }
+                ]
+            }
+        },
+        "/v1/board": {
+            "get": {
+                "tags": [
+                    "게시판"
+                ],
+                "summary": "게시판 목록",
+                "description": "게시판 목록",
+                "operationId": "adminBoardList",
+                "responses": {
+                    "200": {
+                        "description": "successfully Modified",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/BoardOptionJson"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "davinci_auth": []
+                    }
+                ]
             }
         },
         "/admin/board/options": {
             "get": {
                 "tags": [
-                    "게시판"
+                    "-게시판"
                 ],
                 "summary": "게시판 옵션 목록",
                 "description": "게시판 옵션 목록",
@@ -408,7 +425,42 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "davinci_auth": []
+                    }
+                ]
+            }
+        },
+        "/v1/board/{id}": {
+            "get": {
+                "tags": [
+                    "게시판"
+                ],
+                "summary": "게시판 상세 정보",
+                "description": "게시판 상세 정보",
+                "operationId": "adminBoardInfo",
+                "responses": {
+                    "200": {
+                        "description": "successfully Modified",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/BoardOption"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "davinci_auth": []
+                    }
+                ]
             }
         },
         "/v1/member": {
@@ -1463,6 +1515,132 @@
             }
         },
         "/v1/post": {
+            "get": {
+                "tags": [
+                    "게시판 글"
+                ],
+                "summary": "게시판 글 목록",
+                "description": "게시판 글 목록",
+                "operationId": "postGetList",
+                "requestBody": {
+                    "description": "",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/postList"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "successfully Created",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "header": {
+                                            "properties": {
+                                                "totalCnt": {
+                                                    "description": "총 글 수",
+                                                    "type": "integer",
+                                                    "example": 56
+                                                },
+                                                "totalPage": {
+                                                    "description": "총 페이지 수",
+                                                    "type": "integer",
+                                                    "example": 6
+                                                }
+                                            },
+                                            "type": "object"
+                                        },
+                                        "list": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "id": {
+                                                        "description": "게시글 고유번호",
+                                                        "type": "integer",
+                                                        "example": 1
+                                                    },
+                                                    "title": {
+                                                        "description": "게시글 제목",
+                                                        "type": "string",
+                                                        "example": "게시글 제목입니다."
+                                                    },
+                                                    "content": {
+                                                        "description": "게시글 내용",
+                                                        "type": "string",
+                                                        "example": "게시글 내용입니다."
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "failed registered",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "errors": {
+                                            "properties": {
+                                                "statusCode": {
+                                                    "properties": {
+                                                        "20010": {
+                                                            "description": "이미 존재하는 type 입니다.",
+                                                            "properties": {
+                                                                "key": {
+                                                                    "description": "type",
+                                                                    "type": "string",
+                                                                    "example": "type"
+                                                                },
+                                                                "message": {
+                                                                    "type": "string"
+                                                                }
+                                                            },
+                                                            "type": "object"
+                                                        },
+                                                        "20401": {
+                                                            "description": "옵션 및 옵션 값을 확인해주세요.",
+                                                            "properties": {
+                                                                "key": {
+                                                                    "description": "options.editor.value",
+                                                                    "type": "string",
+                                                                    "example": "options.editor.value"
+                                                                },
+                                                                "message": {
+                                                                    "type": "string"
+                                                                }
+                                                            },
+                                                            "type": "object"
+                                                        }
+                                                    },
+                                                    "type": "object"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "davinci_auth": []
+                    }
+                ]
+            },
             "post": {
                 "tags": [
                     "게시판 글"
@@ -1548,7 +1726,12 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "davinci_auth": []
+                    }
+                ]
             }
         }
     },
@@ -1576,6 +1759,29 @@
                         "description": "게시글 내용",
                         "type": "string",
                         "example": "게시글 내용입니다."
+                    }
+                },
+                "type": "object"
+            },
+            "postList": {
+                "required": [
+                    "boardNo"
+                ],
+                "properties": {
+                    "boardNo": {
+                        "description": "게시판 고유 번호",
+                        "type": "string",
+                        "example": 1
+                    },
+                    "page": {
+                        "description": "게시글 페이지",
+                        "type": "integer",
+                        "example": 2
+                    },
+                    "view": {
+                        "description": "한 페이지당 보여질 갯수",
+                        "type": "integer",
+                        "example": 10
                     }
                 },
                 "type": "object"
@@ -1630,7 +1836,7 @@
                         "type": "string",
                         "example": "board"
                     },
-                    "data_type": {
+                    "dataType": {
                         "description": "게시판 옵션 데이터 타입",
                         "type": "string",
                         "example": "radio"
@@ -1781,36 +1987,61 @@
                             "board": {
                                 "description": "작성 권한<br/>all:모두 작성가능<br/>manager:운영진만 작성가능<br/>member:회원만 작성가능",
                                 "type": "enum",
+                                "default": "all",
                                 "example": "all"
                             },
                             "boardReply": {
                                 "description": "글 답변 작성<br/>0:사용안함<br/>1:사용함",
                                 "type": "enum",
+                                "default": "0",
+                                "example": "0"
+                            },
+                            "thema": {
+                                "description": "게시판 테마",
+                                "type": "string",
+                                "default": "boardDefaultThema",
+                                "example": "boardDefaultThema"
+                            },
+                            "thumbnail": {
+                                "description": "섬네일 사용<br/>0:사용안함<br/>1:사용함",
+                                "type": "enum",
+                                "default": "0",
+                                "example": "0"
+                            },
+                            "boardStatus": {
+                                "description": "글 상태<br/>0:사용안함<br/>1:사용함",
+                                "type": "enum",
+                                "default": "0",
                                 "example": "0"
                             },
                             "secret": {
                                 "description": "시크릿 사용<br/>0:사용안함<br/>1:사용함",
                                 "type": "enum",
+                                "default": "0",
                                 "example": "0"
                             },
                             "listViewContent": {
                                 "description": "목록에서 내용보기<br/>0:사용안함<br/>1:사용함",
                                 "type": "enum",
+                                "default": "0",
                                 "example": "0"
                             },
                             "reply": {
                                 "description": "댓글 사용<br/>0:사용안함<br/>1:사용함",
                                 "type": "enum",
-                                "example": "1"
+                                "default": "0",
+                                "example": "0"
                             },
                             "editor": {
                                 "description": "에디터<br/>all:모두 사용<br/>ck:CK에디터 사용<br/>markd:마크다운 사용",
                                 "type": "enum",
+                                "default": "all",
                                 "example": "all"
                             },
                             "image": {
                                 "description": "이미지 첨부<br/>0:사용안함<br/>1:사용함",
                                 "type": "enum",
+                                "default": "0",
                                 "example": "0"
                             }
                         },
@@ -1867,10 +2098,16 @@
             ]
         },
         {
-            "name": "어드민",
+            "name": "게시판",
             "tags": [
                 "게시판",
                 "게시판 글"
+            ]
+        },
+        {
+            "name": "어드민",
+            "tags": [
+                "-게시판"
             ]
         }
     ],
